--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 logging.level.ru.yandex.practicum=debug
 logging.charset.console=UTF-8
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:file:C://Users/IMurzina/IdeaProjects/java-filmorate/db/filmorate
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
