--- a/src/main/resources/application-dev..properties
+++ b/src/main/resources/application-dev..properties
@@ -1,8 +1,7 @@
-spring.profiles.active=dev
 logging.level.ru.yandex.practicum=debug
 logging.charset.console=UTF-8
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:h2:file:C://Users/IMurzina/IdeaProjects/java-filmorate/db/filmorate
+spring.datasource.url=jdbc:h2:mem:filmorate
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
