--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+#spring.profiles.active=dev
 logging.level.ru.yandex.practicum=debug
 logging.charset.console=UTF-8
 spring.sql.init.mode=always
